# bspwc

./: .build.yml  .gitignore  CMakeLists.txt  CONTRIBUTE.md  LICENSE  README.md  meson.build
bspwc/: backend.c  bspwc.c  config.c  cursor.c  desktop.c  handles.c  input.c  keyboard.c  main.c  meson.build  monitor.c  output.c  server.c  tree.c  window.c  xdg_shell_v6.c  xdg_surface_v6.c
bspwc/shell/: xdg_surface.c  xdg_surface_v6.c
bspwc/xdg_shell/: xdg_surface.c
bway/: config.c  main.c  meson.build  server.c
cmake/: Findwlroots.cmake
include/bspwc/: backend.h  bspwc.h  common.h  config.h  cursor.h  desktop.h  handles.h  input.h  keyboard.h  monitor.h  output.h  server.h  surface.h  tree.h  window.h  xdg_shell_v6.h  xdg_surface_v6.h
include/bspwc/shell/: xdg_surface.h  xdg_surface_v6.h
include/bspwc/xdg_shell/: xdg_surface.h
include/bway/: config.h  desktop.h  server.h
